@@ -220,6 +220,12 @@ Activate debug traces, see
 .B \-\-trace help
 for available tracing options
 .TP
+.B \-\-trace-file <file>
+Save trace output to <file> (default=stderr)
+.TP
+.B \-\-parse <file>
+Parse/execute debugger commands from <file>
+.TP
 .B \-\-control-socket <file>
 Hatari reads options from given socket at run-time
 .TP
